# amibot-tg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  LICENSE  Makefile  README.md  app.env.example  fly.toml  main.py  pyproject.toml  test.py
.github/workflows/: fly.yml  format.yaml  main.yml
controllers/: auth.py  db.py  grpc_scheduler.py  rpc_calls.py  telegram_handlers.py
controllers/api/: wear_os_controllers.py
formatter/: response_formatters.py
proto/: amizone.proto  buf.gen.yaml  buf.yaml
server/: go.mod  go.sum  main.go
server/api/: server.go  user_handler.go
server/utils/: config.go  db_setup.go  helper.go
util/: calndr_markup.py  db_client.py  encryption.py  env.py  helpers.py  logger.py  stub.py
