[tool.poetry]
name = "Amibot-tg"
version = "0.1.0"
description = "Amibot on steroids: A Telegram bot for Amizone, powered by the go-amizone API!"
authors = ["Achintya <achintya22052000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.54.0"
protobuf = "3.20.0"
google-api-python-client = "^2.86.0"
grpc-gateway-protoc-gen-openapiv2 = "^0.1.0"
python-telegram-bot = "^20.2"
python-dotenv = "^1.0.0"
motor = "^3.1.2"
sentry-sdk = "^1.29.2"
cryptography = "^41.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # ruff
    "RUF",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "RUF012",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"gen/*"= ["S101"]
